<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph" app:startDestination="@id/authFragment">
    <fragment android:id="@+id/authFragment" android:name="com.example.battleship.auth.AuthFragment" android:label="@string/sign_in">
        <action android:id="@+id/action_authFragment_to_lobbyFragment" app:destination="@id/lobbyFragment" app:popUpTo="@id/authFragment" app:popUpToInclusive="true"/>
    </fragment>
    <fragment android:id="@+id/lobbyFragment" android:name="com.example.battleship.lobby.LobbyFragment" android:label="@string/lobby">
        <action android:id="@+id/action_lobbyFragment_to_placementFragment" app:destination="@id/placementFragment"/>
    </fragment>
    <fragment android:id="@+id/placementFragment" android:name="com.example.battleship.game.PlacementFragment" android:label="@string/place_ships">
        <argument android:name="gameId" app:argType="string"/>
        <argument android:name="isPlayer1" app:argType="boolean"/>
        <action android:id="@+id/action_placementFragment_to_gameFragment" app:destination="@id/gameFragment" app:popUpTo="@id/placementFragment" app:popUpToInclusive="true"/>
    </fragment>
    <fragment android:id="@+id/gameFragment" android:name="com.example.battleship.game.GameFragment" android:label="@string/battle">
        <argument android:name="gameId" app:argType="string"/>
        <argument android:name="isPlayer1" app:argType="boolean"/>
        <action android:id="@+id/action_gameFragment_to_lobbyFragment" app:destination="@id/lobbyFragment" app:popUpTo="@id/lobbyFragment" app:popUpToInclusive="true"/>
    </fragment>
    <fragment android:id="@+id/profileFragment" android:name="com.example.battleship.profile.ProfileFragment" android:label="@string/profile">
        <action android:id="@+id/action_profileFragment_to_authFragment" app:destination="@id/authFragment" app:popUpTo="@id/nav_graph" app:popUpToInclusive="true"/>
    </fragment>
    <fragment android:id="@+id/statsFragment" android:name="com.example.battleship.stats.StatsFragment" android:label="@string/statistics"/>
</navigation>
